fixed overflow of main layout

--- a/src/Layouts/MainLayout.scss
+++ b/src/Layouts/MainLayout.scss
@@ -12,7 +12,6 @@
 
 .main-content-wrapper {
   flex-grow: 1;
-  overflow-y: auto;
 }
 
 
